writing to sqlite db instead of json file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,10 @@ services:
       - '5672:5672'
     networks:
       - network
+  sqlite3:
+    build: ./sqlite3
+    volumes:
+      - volume:/tmp
   send:
     build: ./send
     environment:
@@ -13,6 +17,7 @@ services:
       - RABBIT_QUEUE=clicks
     depends_on:
       - rabbit
+      - sqlite3
     networks:
       - network
   receive:
@@ -26,8 +31,8 @@ services:
       - send
     networks:
       - network
-  display:
-    build: ./display
+  flask:
+    build: ./flask
     ports:
       - '5000:5000'
     volumes:
